--- a/src/styles.scss
+++ b/src/styles.scss
@@ -86,6 +86,11 @@ main {
         background-image: url(./assets/icons/close.svg);
         background-size: 80%;
         background-position: center;
+        transition: all .3s;
+        &:hover{
+        background-color: var(--VeryDarkGrayishCyan);
+        color: #fff;
+        }
       }
     }
   }
