--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
     <section id="tags" *ngIf="filter.length !== 0">
         <div id="tags-container">
             <span *ngFor="let item of filter">
-                {{item}}
+                <span>{{item}}</span>
                 <button (click)="removeTag(item)"></button>
             </span>
         </div>
